[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "calorie-counting"
path = "01/src/main.rs"

[[bin]]
name = "rock-paper-scissors"
path = "02/src/main.rs"

[[bin]]
name = "rucksack-reorganization"
path = "03/src/main.rs"

[[bin]]
name = "camp-cleanup"
path = "04/src/main.rs"

[[bin]]
name = "supply-stack"
path = "05/src/main.rs"

[[bin]]
name = "tuning-trouble"
path = "06/src/main.rs"


[dependencies]
itertools = "*"
regex = "*"
